--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </nav>
     </section>
     <section>
+        <h2>Informacion</h2>
         <p>
             Gremlins es una película estadounidense de comedia-terror del año 1984 dirigida por Joe Dante, escrita por Chris Columbus y protagonizada por Zach Galligan y Phoebe Cates.
             Fue producida por Michael Finnell, mientras que Kathleen Kennedy, Frank Marshall y Steven Spielberg fueron los productores ejecutivos.
