--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section>
         <h2>Trailer</h2>
         <video controls preload="auto" title="Trailer de Los Gremlins">
-            <source src="https://unioviedo-my.sharepoint.com/:v:/g/personal/uo251254_uniovi_es/Ec85LjqEV0VHvk0fTobyRS4B9hUyykpDwa8qoX5riDAxnA?e=2ol3w2" type="video/mp4" />
+            <source src="https://www.dropbox.com/s/nchgcn20n6tpges/trailer.mp4?dl=0" type="video/mp4" />
         </video>
     </section>
     <footer>
