--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section>
         <h2>Trailer</h2>
         <video controls preload="auto" title="Trailer de Los Gremlins">
-            <source src="https://www.dropbox.com/s/nchgcn20n6tpges/trailer.mp4?dl=0" type="video/mp4" />
+            <source src="https://www.dropbox.com/s/nchgcn20n6tpges/trailer.mp4?dl=0" />
         </video>
     </section>
     <footer>
