--- a/html/bandasonora.html
+++ b/html/bandasonora.html
@@ -14,11 +14,11 @@
         <h1>Los Gremlins</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="html/reparto.html">Reparto</a></li>
-                <li><a href="html/bandasonora.html">Banda Sonora</a></li>
-                <li><a href="html/critica.html">Crítica</a></li>
-                <li><a href="html/gremlins2.html">Los Gremlins 2</a></li>
+                <li><a href="index.html" tabindex="1">Inicio</a></li>
+                <li><a href="html/reparto.html" tabindex="2">Reparto</a></li>
+                <li><a href="html/bandasonora.html" tabindex="3">Banda Sonora</a></li>
+                <li><a href="html/critica.html" tabindex="4">Crítica</a></li>
+                <li><a href="html/gremlins2.html" tabindex="5">Los Gremlins 2</a></li>
             </ul>
         </nav>
     </section>
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <audio controls title="Gremlins... Mega Madness">
+                    <audio controls title="Gremlins... Mega Madness" tabindex="6">
                         <source src="resources/audio/gremlins-mega-madness.mp3" type="audio/mpeg">
                     </audio>
                 </td>
@@ -49,7 +49,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <audio controls title="Make It Shine">
+                    <audio controls title="Make It Shine" tabindex="7">
                         <source src="resources/audio/make-it-shine.mp3" type="audio/mpeg">
                     </audio>
                 </td>
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <audio controls title="Out Out">
+                    <audio controls title="Out Out" tabindex="8">
                         <source src="resources/audio/out-out.mp3" type="audio/mpeg">
                     </audio>
                 </td>
@@ -73,7 +73,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <audio controls title="The Gift">
+                    <audio controls title="The Gift" tabindex="9">
                         <source src="resources/audio/the-gift.mp3" type="audio/mpeg">
                     </audio>
                 </td>
@@ -85,7 +85,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <audio controls title="Gizmo">
+                    <audio controls title="Gizmo" tabindex="10">
                         <source src="resources/audio/gizmo.mp3" type="audio/mpeg">
                     </audio>
                 </td>
@@ -97,7 +97,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <audio controls title="Mrs. Deagle">
+                    <audio controls title="Mrs. Deagle" tabindex="11">
                         <source src="resources/audio/mrs-deagle.mp3" type="audio/mpeg">
                     </audio>
                 </td>
@@ -109,7 +109,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <audio controls title="The Gremlin Rag">
+                    <audio controls title="The Gremlin Rag" tabindex="12">
                         <source src="resources/audio/the-gremlin-rag.mp3" type="audio/mpeg">
                     </audio>
                 </td>
@@ -121,23 +121,23 @@
                 <h2>Más información</h2>
                 <ul>
                     <li>
-                        <a title="Pagina de Gremlins en Wikipedia" href="https://es.wikipedia.org/wiki/Gremlins">
+                        <a title="Pagina de Gremlins en Wikipedia" href="https://es.wikipedia.org/wiki/Gremlins" tabindex="13">
                             Wikipedia</a>
                     </li>
                     <li>
-                        <a title="Wiki de Gremlins en Fandom"  href="https://gremlins.fandom.com/wiki/Gremlins_Wiki">
+                        <a title="Wiki de Gremlins en Fandom"  href="https://gremlins.fandom.com/wiki/Gremlins_Wiki" tabindex="14">
                             Fandom</a>
                     </li>
                     <li>
-                        <a title="Pagina web better call saul" href="https://www.imdb.com/title/tt0087363/">
+                        <a title="Pagina web better call saul" href="https://www.imdb.com/title/tt0087363/" tabindex="15">
                             IMDB</a>
                     </li>
                 </ul>
             </section>
-            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer">
+            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer" tabindex="16">
                 <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
                      alt=" HTML5 Válido!" height="64" width="63" /></a>
-            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer ">
+            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="17">
                 <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
                      alt="Valid CSS!" height="31" width="88" /></a>
         </footer>
