--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1>Los Gremlins</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="html/reparto.html">Reparto</a></li>
-                <li><a href="html/bandasonora.html">Banda Sonora</a></li>
-                <li><a href="html/critica.html">Crítica</a></li>
-                <li><a href="html/gremlins2.html">Los Gremlins 2</a></li>
+                <li><a href="index.html" tabindex="1">Inicio</a></li>
+                <li><a href="html/reparto.html" tabindex="2">Reparto</a></li>
+                <li><a href="html/bandasonora.html" tabindex="3">Banda Sonora</a></li>
+                <li><a href="html/critica.html" tabindex="4">Crítica</a></li>
+                <li><a href="html/gremlins2.html" tabindex="5">Los Gremlins 2</a></li>
             </ul>
         </nav>
     </section>
@@ -50,7 +50,7 @@
     </section>
     <section>
         <h2>Trailer</h2>
-        <video controls preload="auto" title="Trailer de Los Gremlins">
+        <video controls preload="auto" title="Trailer de Los Gremlins" tabindex="6">
             <source src="resources/video/trailer.mp4" />
         </video>
     </section>
@@ -59,23 +59,23 @@
                 <h2>Más información</h2>
                 <ul>
                     <li>
-                        <a title="Pagina de Gremlins en Wikipedia" href="https://es.wikipedia.org/wiki/Gremlins">
+                        <a title="Pagina de Gremlins en Wikipedia" href="https://es.wikipedia.org/wiki/Gremlins" tabindex="7">
                             Wikipedia</a>
                     </li>
                     <li>
-                        <a title="Wiki de Gremlins en Fandom"  href="https://gremlins.fandom.com/wiki/Gremlins_Wiki">
+                        <a title="Wiki de Gremlins en Fandom"  href="https://gremlins.fandom.com/wiki/Gremlins_Wiki" tabindex="8">
                             Fandom</a>
                     </li>
                     <li>
-                        <a title="Pagina web better call saul" href="https://www.imdb.com/title/tt0087363/">
+                        <a title="Pagina web better call saul" href="https://www.imdb.com/title/tt0087363/" tabindex="9">
                             IMDB</a>
                     </li>
                 </ul>
             </section>
-            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer">
+            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer" tabindex="10">
                 <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
                      alt=" HTML5 Válido!" height="64" width="63" /></a>
-            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer ">
+            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="11">
                 <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
                      alt="Valid CSS!" height="31" width="88" /></a>
         </footer>
