--- a/html/gremlins2.html
+++ b/html/gremlins2.html
@@ -33,11 +33,11 @@
     </section>
     <section>
         <h2>Cartel</h2>
-        <img src="resources/images/gremlins2.jpg">
+        <img src="resources/images/gremlins2.jpg" alt="Cartel de la pelicula Los Gremlins 2">
     </section>
     <section>
         <h2>Trailer</h2>
-        <video controls preload="auto" title="Trailer de Los Gremlins" tabindex="6">
+        <video controls preload="auto" title="Trailer de Los Gremlins" tabindex="6" alt="Trailer de la pelicula Los Gremlins 2">
             <source src="resources/video/gremlins2.mp4" />
         </video>
     </section>
