--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <section>
         <h2>Trailer</h2>
-        <video controls preload="auto" title="Trailer de Los Gremlins" tabindex="6">
+        <video controls preload="auto" title="Trailer de Los Gremlins" tabindex="6" alt="Trailer de la pelicula Los Gremlins">
             <source src="resources/video/trailer.mp4" />
         </video>
     </section>
