--- a/html/critica.html
+++ b/html/critica.html
@@ -24,7 +24,7 @@
     </section>
     <section>
         <h2>Critica</h2>
-        <dl lang="en">
+        <div lang="en">
             <h3>Chicago Tribune (8,8)</h3>
             <p>A horror-comedy about cute little Christmas toy/pets who turn into murderous monsters wreaking havoc on a Norman Rockwellian town. There's a moral there someplace. With Zach Galligan, Phoebe Cates, Hoyt Axton, Judge Reinhold. (DVD/video)
             </p>
@@ -33,7 +33,7 @@
             </p>
             <h3>New York Times (5)</h3>
             <p>''Gremlins'' is far more interested in showing off its knowledge of movie lore and making random jokes than in providing consistent entertainment.</p>
-        </dl>
+        </div>
     </section>
     <footer>
             <section>
@@ -53,10 +53,10 @@
                     </li>
                 </ul>
             </section>
-            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer" tabindex="9">
+            <a title="Validador html" href="https://validator.w3.org/check?uri=referer" tabindex="9">
                 <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
                      alt=" HTML5 Válido!" height="64" width="63" /></a>
-            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="10">
+            <a title="Validador css" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="10">
                 <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
                      alt="Valid CSS!" height="31" width="88" /></a>
         </footer>
