--- a/html/gremlins2.html
+++ b/html/gremlins2.html
@@ -37,7 +37,7 @@
     </section>
     <section>
         <h2>Trailer</h2>
-        <video controls preload="auto" title="Trailer de Los Gremlins" tabindex="6" alt="Trailer de la pelicula Los Gremlins 2">
+        <video controls preload="auto" title="Trailer de Los Gremlins" tabindex="6">
             <source src="resources/video/gremlins2.mp4" />
         </video>
     </section>
@@ -59,10 +59,10 @@
                     </li>
                 </ul>
             </section>
-            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer" tabindex="10">
+            <a title="Validador html" href="https://validator.w3.org/check?uri=referer" tabindex="10">
                 <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
                      alt=" HTML5 Válido!" height="64" width="63" /></a>
-            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="11">
+            <a title="Validador css" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="11">
                 <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
                      alt="Valid CSS!" height="31" width="88" /></a>
         </footer>
