--- a/html/bandasonora.html
+++ b/html/bandasonora.html
@@ -134,10 +134,10 @@
                     </li>
                 </ul>
             </section>
-            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer" tabindex="16">
+            <a title="Validador html" href="https://validator.w3.org/check?uri=referer" tabindex="16">
                 <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
                      alt=" HTML5 Válido!" height="64" width="63" /></a>
-            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="17">
+            <a title="Validador css" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="17">
                 <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
                      alt="Valid CSS!" height="31" width="88" /></a>
         </footer>
