--- a/html/reparto.html
+++ b/html/reparto.html
@@ -82,10 +82,10 @@
                     </li>
                 </ul>
             </section>
-            <a title="Validador html" tabindex="16" href="https://validator.w3.org/check?uri=referer" tabindex="9">
+            <a title="Validador html" href="https://validator.w3.org/check?uri=referer" tabindex="9">
                 <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
                      alt=" HTML5 Válido!" height="64" width="63" /></a>
-            <a title="Validador css" tabindex="17" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="10">
+            <a title="Validador css" href=" http://jigsaw.w3.org/css-validator/check/referer " tabindex="10">
                 <img src=" http://jigsaw.w3.org/css-validator/images/vcss"
                      alt="Valid CSS!" height="31" width="88" /></a>
         </footer>
